# northwind_django

./: .gitignore  README.md  pyproject.toml
_config/: asgi.py  helpers.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  models.py
accounts/management/commands/: get_user_timezone.py  populate_employees.py  populate_regions.py  populate_territories.py  populate_users.py
accounts/migrations/: 0001_initial.py  0002_northwinduser_user_type.py  0003_alter_northwinduser_user_type.py
config/: helpers.py  settings.py  urls.py
northwind/: admin.py  models.py
northwind/management/commands/: compare_orders.py  populate_category.py  populate_order_details.py  populate_orders.py  populate_products.py  populate_shippers.py  populate_suppliers.py  split_order_details.py
northwind/migrations/: 0001_initial.py
templates/: _base.html  home.html
templates/registration/: login.html
user_accounts/: admin.py  context_processors.py  forms.py  models.py
user_accounts/management/commands/: get_user_timezone.py  import_northwind_users.py  load_movies_click.py  populate_customers.py  populate_employee_territory.py  populate_employees.py  populate_regions.py  populate_territories.py  update_customer_csv.py
user_accounts/migrations/: 0001_initial.py  0002_remove_northwinduser_custom_id.py
