[project]
name = "northwind-django"
version = "0.1.0"
description = "Django Project based upon the Northwind database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-click>=2.4.1",
    "django-extensions>=4.1",
    "geopy>=2.4.1",
    "pandas>=2.3.3",
    "timezonefinder>=8.1.0",
    "tzdata>=2025.2",
    "werkzeug>=3.1.3",
]

[tool.ruff]
line-length = 95
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
